--- a/app/views/pee/news.rhtml
+++ b/app/views/pee/news.rhtml
@@ -5,7 +5,7 @@
 Pages: <%= pagination_links(@newsitem_pages) %>
 <p/>
 <% if @newsitems.empty? %>
-	No news yet! Check back soon.
+	No news yet. Check back soon.
 <% else %>
 	<% for newsitem in @newsitems %>
 		<%= render :partial=>'newsitem', :object=>newsitem %>
