ability to delete comments
git-svn-id: svn+ssh://8.17.86.51/users/home/peeoutside/svn/repo@21 f439cc64-dcae-62a1-c29a-ba80cfb482d8

--- a/app/views/pee/_comment.rhtml
+++ b/app/views/pee/_comment.rhtml
@@ -15,5 +15,9 @@
 <%= h(comment.data) %>
 </div>
 <br/>
+<% if is_logged_in? %>
+  <%= link_to "Delete above comment", :controller=>:admin, :action=>:delete_comment, :id=>comment %>
+  <p/>
+<% end %>
 <hr/>
 <br/>
