fixed from page content issue
git-svn-id: svn+ssh://8.17.86.51/users/home/peeoutside/svn/repo@22 f439cc64-dcae-62a1-c29a-ba80cfb482d8

--- a/app/views/pee/index.rhtml
+++ b/app/views/pee/index.rhtml
@@ -10,6 +10,12 @@
 	<hr/>
 	<br/>
 	<% for newsitem in @news_items %>
-		<%= render :partial=>'newsitem', :object=>newsitem %>
+    <h3>
+    	<%= link_to newsitem.title, :action=>:newsitem, :id=>newsitem %>
+    </h3>
+    <i><%= format_time newsitem.created %></i><br/>
+    Comments: 
+    <%= link_to newsitem.comments.size, :action=>:newsitem, :id=>newsitem %>
+    <br/><br/>
 	<% end %>
 <% end %>
