Added google analytics code

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -76,5 +76,17 @@
 				To view this site in all it's Web 2.0 glory, try out the latest <a href="http://www.microsoft.com/windows/products/winfamily/ie/default.mspx">Internet Explorer</a>, <a href="http://www.firefox.com/">Firefox</a>, or even <a href="http://www.apple.com/safari/">Safari</a>.
 		<![endif]-->
 		</div>
+
+    <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+    var pageTracker = _gat._getTracker("UA-64147-5");
+    pageTracker._initData();
+    pageTracker._trackPageview();
+    </script>
+
+
 	</body>
 </html>
